# interface_com_Flet

./: GroupTest.py  add_expense_page.py  create_expense_page.py  create_tuition_page.py  custom_checkbox.py  expense_page.py  home_page.py  interface.py  log_in_page.py  main.py  private_routing_example.py  pyproject.toml  sign_in_page.py  waiting_room_page.py
fazaconta_frontend/: main.py
fazaconta_frontend/src/: add_expense_page.py  constants.py  create_expense_page.py  expense_page.py  home_page.py  log_in_page.py  sign_in_page.py  utils.py  waiting_room_page.py
fazaconta_frontend/src/api/: ApiClient.py
fazaconta_frontend/src/components/: Button.py  CustomCheckBox.py  Input.py  ProfileImagePicker.py
fazaconta_frontend/src/dtos/: GetGroupByIdDTO.py  GetGroupsByUserIdDTO.py  GroupDTO.py  MemberDTO.py  ParticipantDTO.py  PendingPaymentDTO.py  Pix.py  PixType.py  TransactionDTO.py  UserDTO.py
fazaconta_frontend/src/views/: AddTransactionView.py  CreateGroupView.py  DebtsOrReceivablesView.py  GroupDetailsView.py  GroupsListView.py  HomeView.py  LoginView.py  RegisterView.py  ViewNotFound.py
interface/: interface.py
